<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent"
    android:gravity="center|bottom"
    android:orientation="vertical"
    android:paddingHorizontal="5dp"
    android:paddingBottom="10dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent">

    <TextView
        style="@style/Theme.FireKit.Consent.POLICY.TEXT"
        android:text="@string/fireKit_info_textView_policyTerms"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/txt_policy"
            style="@style/Theme.FireKit.Consent.POLICY.LINK"
            android:text="@string/fireKit_action_textView_policy"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            style="@style/Theme.FireKit.Consent.POLICY.TEXT"
            android:text="@string/and"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/txt_terms"
            style="@style/Theme.FireKit.Consent.POLICY.LINK"
            android:text="@string/fireKit_action_textView_terms"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/user_agree_consent_lay"
        style="@style/Theme.FireKit.Consent.POLICY.BUTTON"
        android:layout_margin="20dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/user_agree_consent_text"
            style="@style/Theme.FireKit.Consent.POLICY.BUTTON.TEXT"
            android:layout_width="wrap_content"
            android:text="@string/fireKit_action_button_agree" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/user_agree_consent_img"
            style="@style/Theme.FireKit.Consent.POLICY.BUTTON.IMG"
            android:layout_marginStart="20dp"
            android:src="@drawable/base_policy_agree" />
    </LinearLayout>

</LinearLayout>
